--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <meta name="viewport" content="initial-scale=1, width=device-width" />
+
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Will's Comic's Book Store" />
   <link rel="stylesheet" href="./index.css" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
